--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: sportzia
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -31,8 +26,25 @@ spec:
       - name: frontend
         image: sathish8329/sportzia:2334
         ports:
-        - containerPort: 3000   # Ensure this matches the Service targetPort
-
+        - containerPort: 3000
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3000
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 3000
+          initialDelaySeconds: 10
+          periodSeconds: 10 
+          failureThreshold: 3
+        resources:
+          requests:
+            cpu: "250m"
+            memory: "512Mi"
 ---
 
 apiVersion: v1
