--- a/app.yaml
+++ b/app.yaml
@@ -20,8 +20,8 @@ spec:
       labels:
         app: frontend
     spec:
-      nodeSelector:
-        eks.amazonaws.com/nodegroup: stage-private
+      # nodeSelector:
+      #   eks.amazonaws.com/nodegroup: stage-private
       containers:
       - name: frontend
         image: sathish8329/sportzia:2336
