--- a/ingress.yaml
+++ b/ingress.yaml
@@ -11,17 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
 spec:
   rules:
-  - host: "sportzia.com"  # Root domain for frontend service
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: sportzia-app-service # Frontend service
-            port:
-              number: 3000  # Fix: Matches the service port
-  - host: "www.sportzia.com"
+  - host: www.sportzia.com
     http:
       paths:
       - path: /
@@ -30,4 +20,4 @@ spec:
           service:
             name: sportzia-app-service
             port:
-              number: 3000  # Fix: Matches the service port
+              number: 3000
