--- a/app.yaml
+++ b/app.yaml
@@ -25,8 +25,8 @@ spec:
       labels:
         app: frontend
     spec:
-      # nodeSelector:
-      #   eks.amazonaws.com/nodegroup: prod-private
+      nodeSelector:
+        eks.amazonaws.com/nodegroup: gpu-on-demand-ng
       containers:
       - name: frontend
         image: sathish8329/sportzia:3836
