--- a/ingress.yaml
+++ b/ingress.yaml
@@ -21,16 +21,16 @@ spec:
             name: sportzia-app-service
             port:
               number: 3000
-  - host: sportzia.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: sportzia-app-service
-            port:
-              number: 3000              
+  # - host: sportzia.com
+  #   http:
+  #     paths:
+  #     - path: /
+  #       pathType: Prefix
+  #       backend:
+  #         service:
+  #           name: sportzia-app-service
+  #           port:
+  #             number: 3000              
   tls:
   - hosts:
     - www.sportzia.com
