--- a/app.yaml
+++ b/app.yaml
@@ -39,23 +39,29 @@ spec:
         image: sathish8329/sportzia:4877
         ports:
         - containerPort: 3000
-        # Optional: you can uncomment probes if you want health checks
-        # livenessProbe:
-        #   httpGet:
-        #     path: /
-        #     port: 3000
-        #   initialDelaySeconds: 30
-        #   periodSeconds: 10
-        #   failureThreshold: 5
-        # readinessProbe:
-        #   httpGet:
-        #     path: /
-        #     port: 3000
-        #   initialDelaySeconds: 30
-        #   periodSeconds: 10 
-        #   failureThreshold: 5
-
-
+        resources:
+          requests:
+            cpu: "200m"
+            memory: "256Mi"
+          limits:
+            cpu: "500m"
+            memory: "512Mi"
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3000
+          initialDelaySeconds: 20
+          periodSeconds: 10
+          timeoutSeconds: 5       # max time to wait for probe response
+          failureThreshold: 5
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 3000
+          initialDelaySeconds: 10
+          periodSeconds: 5
+          timeoutSeconds: 3       # max time to wait for probe response
+          failureThreshold: 3
 ---
 
 apiVersion: v1
